Added timestamp for chats

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,8 @@
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
   font-size: .95rem;
+  background-color: black;
+  color:white;
 }
 
 ul, li {
@@ -19,7 +21,7 @@ h3 {
 
 button {
   border: none;
-  background: #265f82;
+  background: deeppink;
   color: white;
   cursor: pointer;
   padding: 10px;
@@ -28,14 +30,14 @@ button {
 
 button:hover {
   border: none;
-  background: #1F4C69;
+  background: mediumvioletred;
   color: white;
   padding: 10px;
 }
 
 button:disabled {
   cursor: default;
-  background: #698ea5;
+  background: hotpink;
 }
 
 .centered-form {
@@ -44,6 +46,7 @@ button:disabled {
   height: 100vh;
   width: 100vw;
   justify-content: center;
+  color: white;
   background: -moz-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ff3.6+ */
   background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(49,84,129,1)), color-stop(100%, rgba(39,107,130,1))); /* safari4+,chrome */
   background: -webkit-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* safari5.1+,chrome10+ */
@@ -54,7 +57,7 @@ button:disabled {
 
 .centered-form__form {
   background: rgba(250, 250, 250, 0.9);
-  border: 1px solid #e1e1e1;
+  border: 1px solid deeppink;
   border-radius: 5px;
   padding: 0px 20px;
   margin: 20px;
@@ -75,7 +78,7 @@ button:disabled {
 }
 
 .form-field input, .form-field select {
-  border: 1px solid #e1e1e1;
+  border: 1px solid deeppink;
   padding: 10px;
 }
 
@@ -87,18 +90,14 @@ button:disabled {
   overflow-y: scroll;
   width: 260px;
   height: 100vh;
-  background: -moz-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ff3.6+ */
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(49,84,129,1)), color-stop(100%, rgba(39,107,130,1))); /* safari4+,chrome */
-  background: -webkit-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* safari5.1+,chrome10+ */
-  background: -o-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* opera 11.10+ */
-  background: -ms-linear-gradient(125deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* ie10+ */
-  background: linear-gradient(325deg, rgba(39,107,130,1) 0%, rgba(49,84,129,1) 100%); /* w3c */
+  background-color: deeppink;
 }
 
 .chat__sidebar h3 {
-  color: #e6eaee;
+  color: white;
+  background-color: deeppink;
   margin: 10px 20px;
-  text-align: left;
+  text-align: center;
 }
 
 .chat__sidebar ul {
@@ -106,8 +105,7 @@ button:disabled {
 }
 
 .chat__sidebar li {
-  background: #e6eaee;
-  border: 1px solid #e1e1e1;
+  border: 1px solid white;
   border-radius: 5px;
   padding: 10px;
   margin: 10px;
@@ -127,7 +125,7 @@ button:disabled {
 }
 
 .chat__footer {
-  background: #e6eaee;
+  background: white;
   display: flex;
   padding: 10px;
   /*height: 60px;*/
