--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
   font-size: .95rem;
-  background-color: black;
+  background-color: #212121;
   color:white;
 }
 
