added users list

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,9 @@
 ul, li {
   list-style-position: inside;
 }
-
+#users ol{
+  background-color: deeppink;
+}
 h3 {
   font-weight: 600;
   text-align: center;
